--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
 <meta charset="utf-8" />
+  <meta http-equiv="refresh" content="0; url=index5.html">
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Afficher données QR</title>
 <style>
@@ -231,3 +232,4 @@ document.getElementById('copyAsUrlBtn').addEventListener('click', ()=>{
 </script>
 </body>
 </html>
+
