--- a/index7.html
+++ b/index7.html
@@ -52,6 +52,17 @@
   background-color: #f2f2f2; /* gris clair */
 }
 
+	/* Titres */
+.field .title {
+  color: #555555; /* gris foncé */
+  font-weight: 600;
+}
+
+/* Valeurs */
+.field .value {
+  color: #000000; /* noir */
+}
+
     .scan-button {
         margin: 25px auto;
         width: 90%;
@@ -126,3 +137,4 @@
 
 </body>
 </html>
+
