--- a/index9.html
+++ b/index9.html
@@ -16,8 +16,8 @@
     </header>
 
     <div class="status valid">
-      <span class="icon">✔</span>
-      <span>Code QR<br><strong>Valide</strong></span>
+     <span class="icon">✔</span>
+     <img src="valid.png" alt="GovCheck" class="logo">
     </div>
 
     <div class="fields">
@@ -55,3 +55,4 @@
 
 </body>
 </html>
+
