--- a/index9.html
+++ b/index9.html
@@ -17,7 +17,7 @@
 
     <div class="status valid">
      <span class="icon">✔</span>
-     <img src="valid.png" alt="GovCheck" class="logo">
+      <div class="title">QR Code valide</div>
     </div>
 
     <div class="fields">
@@ -55,4 +55,5 @@
 
 </body>
 </html>
+
 
