--- a/index9.html
+++ b/index9.html
@@ -12,19 +12,41 @@
 
     <header class="header">
       <span class="back">‹</span>
-      <img src="govcheck-logo.png" alt="GovCheck" class="logo" />
+      <img src="govcheck-logo.png" alt="GovCheck" class="logo1" />
     </header>
 
     <div class="status valid">
-     <span class="icon">✔</span>
-      <div class="title">QR Code valide</div>
+	 <img src="logo-valid2.png" alt="GovCheck" class="logo2" />
     </div>
 
     <div class="fields">
+	<div class="field">
+        <div class="title">Type de document</div>
+        <div class="value">Certificat d'affiliation</div>
+      </div>
+	<div class="field">
+        <div class="title">Nom</div>
+        <div class="value">Zanotti</div>
+      </div>
+	  
+	  	<div class="field">
+        <div class="title">Prénom</div>
+        <div class="value">Lucia</div>
+      </div>
+	  
+	  	<div class="field">
+        <div class="title">Nos références</div>
+        <div class="value">1991051206121</div>
+      </div>
+	  
+	  	<div class="field">
+        <div class="title">Date d'établissement du certificat</div>
+        <div class="value">31.12.2025</div>
+      </div>
 
       <div class="field">
         <div class="title">Plage d'observation</div>
-        <div class="value">à partir du 11.08.2025</div>
+        <div class="value">à partir du 31.12.2025</div>
       </div>
 
       <div class="field">
@@ -34,7 +56,7 @@
 
       <div class="field">
         <div class="title">Période d'occupation 1</div>
-        <div class="value">du 01.12.2021 à ce jour</div>
+        <div class="value">du 01.06.2025 à ce jour</div>
       </div>
 
       <div class="field">
@@ -44,7 +66,7 @@
 
       <div class="field">
         <div class="title">Employeur 1</div>
-        <div class="value">VEOLIA LUXEMBOURG SA</div>
+        <div class="value">RESTAURANT LA CELLULA SA</div>
       </div>
 
     </div>
@@ -55,5 +77,3 @@
 
 </body>
 </html>
-
-
